# Workshop_Computer

./: .gitignore  .gitmodules  CLAUDE.md  GITHUB_PAGES_SETUP.md  Makefile  README.md  package.json
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/: copilot-instructions.md
.github/scripts/: update-readme.py  web_editor_resolve.py
.github/workflows/: pages.yml  update-readme.yml
Demonstrations+HelloWorlds/AI/: README.md  WORKSHOP_COMPUTER_AI_DIRECTIVE.md  WORKSHOP_SYSTEM_AI_DIRECTIVE.md
Demonstrations+HelloWorlds/Micropython/: README.md
documentation/: author-page-design.md  info.yaml.md  site-migration.md
releases/: README.md
releases/000_Simple_MIDI/: README.md  info.yaml
releases/003_Turing_Machine/: info.yaml
releases/004_BYO_Benjolin/: CMakeLists.txt  info.yaml  main.cpp
releases/005_chord_blimey/: info.yaml
releases/006_usb_audio/: CMakeLists.txt  README.md  usb_audio_midi_interface.uf2
releases/006_usb_audio/src/: quantiser.h  tusb_config.h  usb_descriptors.h
releases/006_usb_audio/src/ComputerCard/: ComputerCard.h
releases/007_bumpers/: info.yaml
releases/009_DivCom/: README.md  info.yaml
releases/00_Simple_MIDI/: README.md  info.yaml
releases/011_goldfish/: README.md  adpcm.h  goldfish_debug.h  quantiser.h
releases/012_am_coupler/: info.yaml
releases/013_noisebox/: 13_noisebox.uf2
releases/014_cvmod/: info.yaml
releases/015_MLRws/: CMakeLists.txt  ComputerCard.h  adpcm.h  device_mode.h  monome_ws.c  usb_descriptors.c
releases/015_MLRws/UF2/: MLRws.1.1.5.uf2
releases/015_MLRws/cmake/: check_firmware_reserve.cmake
releases/015_MLRws/docs/gridstation/: MLR_Grid_diagrams.pptx
releases/015_MLRws/docs/images/: Grid_host.mov
releases/016_the_bells/: README.md
releases/018_chord_organ/: .gitignore  README.md  info.yaml
releases/020_reverb/: reverb.c  sysex_sentences.h  tusb_config.h  usb_descriptors.c
releases/021_resonator/: build.sh  chords.h  generate_period_table.py  io_modes.h  main.cpp
releases/022_sheep/: README.md  info.yaml
releases/023_SlowMod/: info.yaml
releases/024_crafted_volts/: README.md  info.yaml
releases/025_utility_pair/: info.yaml
releases/026_clockwork/: README.md  tusb_config.h  usb_midi_host.c
releases/027_Siren/: info.yaml
releases/028_eighties_bass/: info.yaml
releases/02_comingsoon/: README.md  info.yaml
releases/031_esp/: CMakeLists.txt  README.md  main.cpp
releases/032_vink/: info.yaml
releases/033_drumdrum/: grid_ui.cpp  midi_sysex.cpp  monome_mext.c  tusb_config.h  (+2 more)
releases/039_knots/src/: CMakeLists.txt
releases/043_Castle_Process/: CMakeLists.txt  README.md  info.yaml
releases/043_Castle_Process/uf2/: CastleProcess.uf2
releases/067_Fragments/: CMakeLists.txt  LICENSE.md  README.md
releases/067_Fragments/src/: usb_descriptors.c
releases/067_Fragments/web/: fragments_librarian.html
releases/091_chorgan/: CMakeLists.txt  main.cpp
releases/15_MLRws/: .gitignore  CMakeLists.txt  ComputerCard.h  GNUmakefile  MonomeGrid.h  README.md  device_mode.c  device_mode.h  info.yaml  main.cpp  mlr.c  mlr.h  monome_mext.c  monome_mext.h  monome_ws.c  monome_ws.h  tusb_config.h  ulaw.h
releases/15_MLRws/.github/: copilot-instructions.md
releases/15_MLRws/UF2/: MLRws.1.1.0.uf2  MLRws.1.1.1.uf2  MLRws.1.1.2.uf2  MLRws.1.1.3.uf2  MLRws.1.1.4.uf2  MLRws.1.1.6.uf2  MLRws.uf2  MLRws_mono.uf2  MLRws_stereo.uf2
releases/15_MLRws/docs/: Computer_monome_api.md  Gridful.md  Gridless.md  SampleMgr.md
releases/15_MLRws/docs/gridstation/: CUT_page.txt  MLR_Grid_diagrams.pptx  REC_page.txt  grid_chrome.txt
releases/15_MLRws/docs/images/: Grid_device.mov  Gridless.mov  MLR_grid_ws.pptx
releases/15_MLRws/web/: MLRws.js  index.html
releases/18_chord_organ/: CMakeLists.txt  README.md  chords.h  info.yaml  lookup_tables.h  main.cpp  progressions.h
releases/19_CA_Sequencer/: CA_Sequencer.uf2  CMakeLists.txt  README.md  info.yaml  main.cpp
releases/20_reverb/: CMakeLists.txt  README.md  clock.h  computer.h  info.yaml  reverb.c  reverb.html  sysex_sentences.h
releases/21_resonator/: .gitignore  CMakeLists.txt  README.md  RELEASE_NOTES.md  info.yaml  main.cpp  pitch_utils.h  resonator.h  serial_flash.cpp
releases/21_resonator/docs/: index.html  serve.sh
releases/26_clockwork/: CMakeLists.txt  LICENSE.md  info.yaml  main.cpp
releases/26_clockwork/ComputerCard/: ComputerCard.h
releases/433_sense_of_space/development/switch_seat_creak/: CMakeLists.txt  LICENSE  README.md  info.yaml  main.cpp
releases/433_sense_of_space/development/switch_seat_creak/UF2/: 433_sense_of_space_seat_creak_2mb.uf2
releases/44_Birds/: CMakeLists.txt  HANDOVER.md  info.yaml  main.cpp
releases/66_stretchcore/: CMakeLists.txt  Makefile  README.md  info.yaml
releases/66_stretchcore/UF2/: stretchcore.uf2
releases/66_stretchcore/src/: BreakyAudioBank.cpp  BreakyAudioBank.h  BreakySampleManager.cpp  main.cpp
releases/66_stretchcore/web/: package.json
releases/66_stretchcore/web/src/: App.tsx  bank.ts  serial.ts  styles.css
releases/74_Wild_Pebble/: CMakeLists.txt  README.md  WildPebble.cpp  info.yaml
releases/74_Wild_Pebble/MIDI_enabled/: CMakeLists.txt  README.md  WildPebbleMIDI.cpp
releases/74_Wild_Pebble/UF2/: WildPebble.uf2
releases/75_Turing_Clouds/: CMakeLists.txt  README.md  Turing_Clouds.uf2  bin2uf2.py  info.yaml  main.cpp
releases/80_breaky/: CMakeLists.txt  Makefile  README.md
releases/80_breaky/scripts/: encode_audio.py  upload_uf2.sh
releases/80_breaky/src/: BreakySampleManager.cpp  BreakySampleManager.h  main.cpp
releases/80_breaky/web/: index.html  package-lock.json  package.json
releases/80_breaky/web/src/: App.tsx  bank.test.ts  bank.ts  serial.ts  styles.css
releases/82_Computer_Grids/: CMakeLists.txt  ComputerCardImpl.cpp  ConfigStore.cpp  GridsCard.cpp  GridsEngine.h  GridsResources.h  README.md  context.md  info.yaml  main.cpp  tusb_config.h  usb_descriptors.c
releases/82_Computer_Grids/UF2/: 82_Computer_Grids.uf2
scripts/: backfill_dates.py  last_elf.sh  pico_auto_make.mk  start_openocd_host.ps1  start_openocd_host.sh
(+3325 files in other folders)
